Use /dev/urandom by default on UNIX platforms to avoid large delays at start-up (and Yoya knows when else). It will lower the security of anything that relies on java.security.SecureRandom. for RNG, but there is no nice way to initialize different SecureRandom instances with different seed generators.
(this was committed as r964 on a development branch by <hategan> but I
would like it get to get tested in the trunk now)


git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1004 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+(07/29/07)
+
+*** Use /dev/urandom by default on UNIX platforms to avoid large
+    delays at start-up (and Yoya knows when else). It will lower the
+    security of anything that relies on java.security.SecureRandom 
+    for RNG, but there is no nice way to initialize different SecureRandom
+    instances with different seed generators.
+
 (07/28/07)
 
 *** Removed break; statement from the language. It was previously unimplemented
