Prototype structured_regexp_mapper for performing a regexp transformation on the filenames of one dataset to produce another dataset with the same structure but different leaf filenames.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1024 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(07/31/07)
+
+*** Prototype structured_regexp_mapper for performing a regexp transformation
+    on the filenames of one dataset to produce another dataset with the
+    same structure but different leaf filenames.
+
 (07/30/07)
 
 *** All simple types are now passed around inside of DSHandle objects,
