A different site catalog element <execution> that fills a similar role to the existing <jobmanager> element with a syntax more sympathetic to submitting via non-GRAM submission systems.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1078 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(08/16/07)
+
+*** A different site catalog element <execution> that fills a similar role
+    to the existing <jobmanager> element with a syntax more sympathetic to
+    submitting via non-GRAM submission systems.
+
 (07/31/07)
 
 *** Prototype structured_regexp_mapper for performing a regexp transformation
