updated redirection stuff
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1689 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/abstraction-common/CHANGES.txt
+++ b/cog/modules/abstraction-common/CHANGES.txt
@@ -17,6 +17,10 @@
        JobSpecification.setRedirected
        JobSpecification.setLocalExecutable
        JobSpecification.setLocatInput
+       
+*** Oh, and application failures caused by non-zero exit codes now have
+    their own exception (JobException), which can also be used to 
+    retrieve the exit code nicely.
 
 (07/28/2007)
 
