--- a/src/cog/modules/provider-gt2/CHANGES.txt
+++ b/src/cog/modules/provider-gt2/CHANGES.txt
@@ -1,3 +1,7 @@
+(08/20/2007)
+
+*** Updated to use the new redirection stuff
+
 (08/10/2007)
 
 *** Removed a puzzling thing. Seems like most put/get methods in
