updated redirection stuff
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1693 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-local/CHANGES.txt
+++ b/cog/modules/provider-local/CHANGES.txt
@@ -1,3 +1,8 @@
+(08/20/2007)
+
+*** Rimplemented redirection to conform to new things in the
+    interfaces
+
 (03/11/2007)
 
 *** Improved the implementation of the execution provider:
