--- a/cog/modules/karajan/CHANGES.txt
+++ b/cog/modules/karajan/CHANGES.txt
@@ -1,3 +1,8 @@
+(08/22/2007)
+
+*** failOnJobError=false would not make task:execute() return 
+    anything if the job succeeded. Now it returns a 0.
+
 (08/20/2007)
 
 *** Added failOnJobError flag to task:execute(). Should it be set
