--- a/src/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/src/cog/modules/provider-localscheduler/CHANGES.txt
@@ -1,3 +1,8 @@
+(08/22/07)
+
+*** The cobalt provider was not passing command line arguments
+    to the job
+
 (08/20/07)
 
 *** Redirection updates
