exit code regexp
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1708 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/cog/modules/provider-localscheduler/CHANGES.txt
@@ -5,6 +5,10 @@
     
 *** Added -k <kernel profile> option for cobalt. The spec attribute
     is "kernelprofile".
+    
+*** Configurable exit code extraction regexps (Kevin Harms points
+    out that looking for a string containing "BG/L job exit status"
+    is likely to not work on a BG/P). D'oh!
 
 (08/20/07)
 
