query for specific types of handlers
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1713 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/abstraction-common/CHANGES.txt
+++ b/cog/modules/abstraction-common/CHANGES.txt
@@ -1,3 +1,10 @@
+(08/23/2007)
+
+*** Added ability to query for a list of providers supporting
+    a certain type of task handler.
+    
+*** Deprecated Service.JOB_SUBMISSION. Use Service.EXECUTION.
+
 (08/20/2007)
 
 *** Made the way redirection works more consistent. As it was, a flag
