dcache and PBS providers added as dependencies
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1125 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,8 @@
 
 *** Changes the configuration to allow loading a specific file even
     if the defaults cannot be found.
+    
+*** Added PBS and dCache providers as dependencies
 
 (08/23/07)
 
