fixed some typecheck issues with arrays introduced earlier; also allow assignments from int[] to float[]
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1130 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,13 @@
     
 *** Added PBS and dCache providers as dependencies
 
+*** Typechecks on arrays would fail (this was introduced by the type
+    system changes). Fixed.
+    
+*** Assignments from integer[] to float[] should not fail for type
+    reasons (nor should passing an integer[] for a float[] fail the
+    typecheck).
+
 (08/23/07)
 
 *** A few changes to the way types work. Whether something is an array
