moved @arg to swiftscript side
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1135 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(08/29/07)
+
+*** Moved @arg to swiftscript namespace/package
+
 (08/28/07)
 
 *** Added throttle.score.job.factor to swift.properties (the functionality
