added @filenames back
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1137 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,8 @@
 
 *** Moved @arg to swiftscript namespace/package
 
+*** @filenames disappeared at some point in time. It is back.
+
 (08/28/07)
 
 *** Added throttle.score.job.factor to swift.properties (the functionality
