fixed some path issues
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1138 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,12 @@
 
 *** @filenames disappeared at some point in time. It is back.
 
+*** Fixed some issues with paths returned by fringePaths being
+    parsed into the wrong things. It points out that one should 
+    be careful about methods typically used to get some human 
+    readable representation of data (such as toString()) being 
+    relied on to provide any kind of functional consistency.
+
 (08/28/07)
 
 *** Added throttle.score.job.factor to swift.properties (the functionality
