better error handling on worker node
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1183 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(09/04/07)
+
+*** Updated wrapper to be more thorough at diagnosing problems.
+
 (08/29/07)
 
 *** Moved @arg to swiftscript namespace/package
