attempt at a more resilient argument passing method
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1207 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(09/08/07)
+
+*** Changed the way arguments are passed to the wrapper. This
+    should be more resilient to broken middleware that doesn't
+    properly quote arguments.
+
 (09/04/07)
 
 *** Updated wrapper to be more thorough at diagnosing problems.
