--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(09/13/07)
+
+*** Changed lazy error default from true to false. This affect how
+    Swift handles workflows when an error occurs. See the userguide
+    for further details.
+
 (09/10/07)
 
 *** Removed ability to specify type of index variable in foreach loops. This
