Add a @regexp language function which provides more regular expression functionality than is provided by @strcut. This is intended to allow the regular expression mapper to be removed (with uses of it replaced with the single file mapper and the @regexp function)
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1227 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+(09/18/07)
+
+*** Add a @regexp language function which provides more regular expression
+    functionality than is provided by @strcut. This is intended to allow
+    the regular expression mapper to be removed (with uses of it replaced
+    with the single file mapper and the @regexp function)
+
 (09/13/07)
 
 *** Changed lazy error default from true to false. This affect how
