changelog for iterate
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1231 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,8 @@
 (09/18/07)
 
+*** Add a basic iterate {} language construct, and an @extractint function
+    that can be used with it.
+
 *** Add a @regexp language function which provides more regular expression
     functionality than is provided by @strcut. This is intended to allow
     the regular expression mapper to be removed (with uses of it replaced
