correctly map count to -c and host count to -n
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1744 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/cog/modules/provider-localscheduler/CHANGES.txt
@@ -1,3 +1,13 @@
+(09/19/07)
+
+*** Cobalt: 'count' attribute mapped to '-c'. The default should
+    be figured by cqsub from 'hostCount'. Looking at the cqsub
+    code, it seems like count = 2 * hostCount on a BG/L and
+    count = 4 * hostCount on a BG/P.
+
+*** Cobalt: 'hostCount' attribute mapped to '-n', with a default
+    of 1
+
 (08/22/07)
 
 *** The cobalt provider was not passing command line arguments
