updated changes a bit
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1745 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/cog/modules/provider-localscheduler/CHANGES.txt
@@ -3,7 +3,8 @@
 *** Cobalt: 'count' attribute mapped to '-c'. The default should
     be figured by cqsub from 'hostCount'. Looking at the cqsub
     code, it seems like count = 2 * hostCount on a BG/L and
-    count = 4 * hostCount on a BG/P.
+    count = 4 * hostCount on a BG/P. That's in vn mode. In
+    co mode count = hostCount.
 
 *** Cobalt: 'hostCount' attribute mapped to '-n', with a default
     of 1
