note in docs/README about being able to view output locally
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1266 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/README
+++ b/docs/README
@@ -29,3 +29,6 @@ The buildguides.sh script will build all guides. Run it with no parameters,
 like this:
 
 $ ./buildguides.sh
+
+This will produced a .php file for each document. These files are
+sufficiently HTML-like that they can be opened in a local web browser.
