CHANGES note that log files have been changing
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1278 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(09/28/07)
+*** Over the past week, a number of changes have been made to the logging
+    output of Swift to make it richer. This is likely to break existing
+    log processing code.
+
 (09/19/07)
 
 *** Subtle changes to the behaviour of AbstractFileMapper and its subclasses
