Clustering is now disabled by default.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1279 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,7 @@
 (09/28/07)
+
+*** Clustering is now disabled by default.
+
 *** Over the past week, a number of changes have been made to the logging
     output of Swift to make it richer. This is likely to break existing
     log processing code.
