--- a/src/cog/modules/provider-gt2/CHANGES.txt
+++ b/src/cog/modules/provider-gt2/CHANGES.txt
@@ -1,3 +1,8 @@
+(10/03/2007)
+
+*** Fixed some issues with the credentials used for the callback
+    handler.
+
 (08/20/2007)
 
 *** Updated to use the new redirection stuff
