cases sensitivity of tc profile
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1320 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(10/03/07)
+
+*** Profile names/keys in tc.data are now case insensitive
+
 (10/02/07)
 
 *** Swift 0.3 release candidate 1 built from swift svn r1312, cog r1769
