--- a/cog/modules/karajan/CHANGES.txt
+++ b/cog/modules/karajan/CHANGES.txt
@@ -1,3 +1,7 @@
+(10/03/2007)
+
+*** Converted more things to use the CWD below
+
 (09/19/2007)
 
 *** Added hostCount argument to task:execute. This means that, in
