remove compound statements and associated unit tests. they did not provide the scoping that seems their only purpose, and have (as far as I am aware) never been used outside of the unit tests.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1486 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/not-working/120-many-nested-statements-missing-semi.xml
+++ b/tests/language/not-working/120-many-nested-statements-missing-semi.xml
@@ -1,1 +1,1 @@
-Could not compile SwiftScript source: line 7:17: unexpected token: }
+Could not compile SwiftScript source: line 1:1: expecting EOF, found '{'
