--- a/tests/language/not-working/119-many-nested-statements-missing-close.xml
+++ b/tests/language/not-working/119-many-nested-statements-missing-close.xml
@@ -1,1 +1,1 @@
-Could not compile SwiftScript source: line 11:1: expecting '}', found 'null'
+Could not compile SwiftScript source: line 1:1: expecting EOF, found '{'
