Many unused fields in the sites catalog, sites.xml, are now optional.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1487 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(11/20/07)
+
+*** Many unused fields in the sites catalog, sites.xml, are now optional.
+
 (11/01/07)
 
 *** Concurrent mapper now generates filenames in a relatively deep directory
