CHANGES log for r1486
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1488 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,9 @@
 
 *** Many unused fields in the sites catalog, sites.xml, are now optional.
 
+*** Nested statement blocks are no longer supported. These saw little use
+    and were buggy.
+
 (11/01/07)
 
 *** Concurrent mapper now generates filenames in a relatively deep directory
