--- a/modules/provider-ssh/CHANGES.txt
+++ b/modules/provider-ssh/CHANGES.txt
@@ -1,3 +1,15 @@
+(11/23/2007)
+
+*** Added connection caching and use of SSH channels, and their management
+    (tailored for OpenSSH servers: 10 max concurrent unauthenticated 
+    connections, and 10 max channels per connection)
+    
+*** Added a file resource for SSH (uses the SFTP subsystem)
+
+*** Rewrote the execution provider to:
+    - always start /bin/sh instead of the user shell
+    - use the channel management scheme above
+
 (08/20/2007)
 
 *** Redirection updates
