--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,7 @@
 (11/23/07)
+new parameter, execution.retries to specify th number of time a job
+will be retried if it fails (giving a maximum of 1 + execution.retries
+attempts at execution)
 
 *** Added filesystem site catalog element. Looks like 'execution' and
     allows, for example, SSH to be used for remote filesystem access.
