data channel reuse
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1850 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-gt2/CHANGES.txt
+++ b/cog/modules/provider-gt2/CHANGES.txt
@@ -1,3 +1,9 @@
+(12/03/2007)
+
+*** Added data channel reuse mode for GridFTP if the server
+    version is 2.3. Presumably more versions support this and
+    they should eventually be added.
+
 (10/30/2007)
 
 *** Added totalSize implementation to data sources such that 
