Added -runid parameter that specifies the run identifier on the command line, rather than having it automatically generated. This must be unique for every invocation of a workflow and is used in several places to keep files from different executions cleanly separated. By default, a datestamp and random number are used to generate a run identifier. When using this parameter, care should be taken to ensure that the run ID remains unique with respect to all other run IDs that might be used, irrespective of (at least) expected run location, workflow or user.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1504 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,15 @@
+(12/03/07)
+*** Added -runid parameter that specifies the run identifier on the command
+    line, rather than having it automatically generated. This must
+    be unique for every invocation of a workflow and is used in several
+    places to keep files from different executions cleanly separated. By
+    default, a datestamp and random number are used to generate a run
+    identifier. When using this parameter, care should be taken to ensure
+    that the run ID remains unique with respect to all other run IDs that
+    might be used, irrespective of (at least) expected run location,
+    workflow or user.
+
+
 (11/23/07)
 new parameter, execution.retries to specify th number of time a job
 will be retried if it fails (giving a maximum of 1 + execution.retries
