CHANGE entry for r1492 was poorly formatted.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1505 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,11 +9,10 @@
     might be used, irrespective of (at least) expected run location,
     workflow or user.
 
-
 (11/23/07)
-new parameter, execution.retries to specify th number of time a job
-will be retried if it fails (giving a maximum of 1 + execution.retries
-attempts at execution)
+*** new parameter, execution.retries to specify the number of time a job
+    will be retried if it fails (giving a maximum of 1 + execution.retries
+    attempts at execution)
 
 *** Added filesystem site catalog element. Looks like 'execution' and
     allows, for example, SSH to be used for remote filesystem access.
