deprecate use of .dtm extension for source files
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1514 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(12/07/07)
+*** Deprecated use of .dtm extension for source files. Use .swift instead.
+    Support for .dtm will be dropped eventually.
+
 (12/03/07)
 *** Added -runid parameter that specifies the run identifier on the command
     line, rather than having it automatically generated. This must
