--- a/src/cog/modules/provider-ssh/CHANGES.txt
+++ b/src/cog/modules/provider-ssh/CHANGES.txt
@@ -1,3 +1,7 @@
+(12/28/2007)
+
+*** Fixed passing of empty arguments
+
 (11/23/2007)
 
 *** Added connection caching and use of SSH channels, and their management
